# IssueScout

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/evaluation/datasets/: pallets_flask_evaluation.json
backend/issuescout/: __init__.py  main.py
backend/issuescout/application/: candidate_pull_request_service.py  container.py
backend/issuescout/cli/: __init__.py  main.py
backend/issuescout/core/: config.py  logging.py
backend/issuescout/domain/: __init__.py
backend/issuescout/evaluation/: ground_truth.py  loader.py  models.py  pipeline.py  report.py  runner.py  timeline_relation.py
backend/issuescout/evidence/: __init__.py  builder.py  collector.py  comments.py  commits.py  model.py  summary.py  timeline.py  weights.py
backend/issuescout/github/: __init__.py  auth.py  cache.py  client.py  comments.py  commits.py  issue_comments.py  issues.py  pulls.py  repository.py  timeline.py
backend/issuescout/models/: __init__.py  analysis.py  explanation.py  issue.py  pull_request.py  repository.py  scan_context.py  scan_job.py  scan_result.py  scan_status.py
backend/issuescout/output/: __init__.py  console.py  explanation.py  json.py
backend/issuescout/prediction/: __init__.py  analysis_service.py  confidence_service.py  explanation_service.py  prediction_service.py
backend/issuescout/presentation/: __init__.py  console_reporter.py
backend/issuescout/profiles/: __init__.py  base.py  cpython.py  registry.py
backend/issuescout/ranking/: __init__.py  ranker.py
backend/issuescout/repositories/: __init__.py  factory.py  in_memory_scan_job_repository.py  scan_job_repository.py
backend/issuescout/scanner/: confidence.py  engine.py  fetcher.py  pipeline.py  progress.py
backend/issuescout/services/: comment_service.py  commit_history_service.py  commit_service.py  issue_service.py  pull_request_service.py  repository_service.py  review_service.py  scan_job_service.py  timeline_service.py
backend/tests/: test___main__.py
(+405 files in other folders)
