[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "issuescout"
version = "0.1.0"
description = "GitHub issue and pull request relation detection engine"
authors = [
    { name = "AnthropicBots" }
]

license = { text = "MIT" }

keywords = [
    "github",
    "open-source",
    "issue-discovery",
    "pull-request",
    "fastapi",
    "react",
    "analysis",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "anyio>=4.0",

    # Static analysis
    "ruff>=0.12.0",
    "mypy>=1.10",

    # Type stubs
    "types-requests",
]

[tool.setuptools]
packages = ["issuescout"]
